[workspace]
resolver = "2"
members = [
    "robyn_validation",
    "robyn_openapi",
    "robyn_ratelimit",
    "robyn_auth",
    "robyn_python",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Kevin Keller <kellerkev@gmail.com>"]
license = "MIT"
repository = "https://github.com/KellerKev/robyn-extensions"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Schema generation
schemars = { version = "0.8", features = ["derive"] }

# OpenAPI
utoipa = { version = "4.2", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui = { version = "6.0", features = ["actix-web"] }

# HTTP
http = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Authentication
jsonwebtoken = "9.2"
base64 = "0.22"

# Rate limiting
governor = "0.6"
dashmap = "5.5"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Python bindings
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38"] }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Caching
moka = { version = "0.12", features = ["future"] }
