[package]
name = "robyn_auth"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
jsonwebtoken.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio.workspace = true
base64.workspace = true
thiserror.workspace = true
moka.workspace = true
chrono.workspace = true
urlencoding = "2.1"

[lib]
name = "robyn_auth"
path = "src/lib.rs"
