[package]
name = "robyn_openapi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
utoipa.workspace = true
thiserror.workspace = true
indexmap = "2.2"

[lib]
name = "robyn_openapi"
path = "src/lib.rs"
