[package]
name = "robyn_validation"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
thiserror.workspace = true
regex = "1.10"
validator = { version = "0.18", features = ["derive"] }

[lib]
name = "robyn_validation"
path = "src/lib.rs"
